// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Category.svelte > should render using default props 1`] = `
<div>
  <section>
    <!---->
    <div
      aria-label="tabs"
      data-tab-align="start"
      data-tab-orientation="horizontal"
      data-tab-position="before"
      data-tab-root=""
      role="tablist"
      tabindex="0"
    >
      <div
        data-tab-list=""
      >
        <!---->
         
        <!---->
      </div>
       
      <div
        data-tab-content=""
        role="tabpanel"
      >
        <div
          data-tab-empty=""
        >
          No tabs available.
          <!---->
        </div>
        <!---->
      </div>
    </div>
    
    <!---->
     
    <field-layout
      class="vertical"
    >
      <!---->
    </field-layout>
  </section>
  
</div>
`;

exports[`Category.svelte > should render using specified class 1`] = `
<div>
  <section
    class="custom-class"
  >
    <!---->
    <div
      aria-label="tabs"
      data-tab-align="start"
      data-tab-orientation="horizontal"
      data-tab-position="before"
      data-tab-root=""
      role="tablist"
      tabindex="0"
    >
      <div
        data-tab-list=""
      >
        <!---->
         
        <!---->
      </div>
       
      <div
        data-tab-content=""
        role="tabpanel"
      >
        <div
          data-tab-empty=""
        >
          No tabs available.
          <!---->
        </div>
        <!---->
      </div>
    </div>
    
    <!---->
     
    <field-layout
      class="vertical"
    >
      <!---->
    </field-layout>
  </section>
  
</div>
`;

exports[`Category.svelte > should render using specified class 2`] = `
<div>
  <section
    class="custom-class-2"
  >
    <!---->
    <div
      aria-label="tabs"
      data-tab-align="start"
      data-tab-orientation="horizontal"
      data-tab-position="before"
      data-tab-root=""
      role="tablist"
      tabindex="0"
    >
      <div
        data-tab-list=""
      >
        <!---->
         
        <!---->
      </div>
       
      <div
        data-tab-content=""
        role="tabpanel"
      >
        <div
          data-tab-empty=""
        >
          No tabs available.
          <!---->
        </div>
        <!---->
      </div>
    </div>
    
    <!---->
     
    <field-layout
      class="vertical"
    >
      <!---->
    </field-layout>
  </section>
  
</div>
`;

exports[`Category.svelte > should render using specified type 1`] = `
<div>
  <section>
    <!---->
    <div
      aria-label="tabs"
      data-tab-align="start"
      data-tab-orientation="horizontal"
      data-tab-position="before"
      data-tab-root=""
      role="tablist"
      tabindex="0"
    >
      <div
        data-tab-list=""
      >
        <!---->
         
        <!---->
      </div>
       
      <div
        data-tab-content=""
        role="tabpanel"
      >
        <div
          data-tab-empty=""
        >
          No tabs available.
          <!---->
        </div>
        <!---->
      </div>
    </div>
    
    <!---->
     
    <field-layout
      class="horizontal"
    >
      <!---->
    </field-layout>
  </section>
  
</div>
`;

exports[`Category.svelte > should render using specified type 2`] = `
<div>
  <section>
    <!---->
    <div
      aria-label="tabs"
      data-tab-align="start"
      data-tab-orientation="horizontal"
      data-tab-position="before"
      data-tab-root=""
      role="tablist"
      tabindex="0"
    >
      <div
        data-tab-list=""
      >
        <!---->
         
        <!---->
      </div>
       
      <div
        data-tab-content=""
        role="tabpanel"
      >
        <div
          data-tab-empty=""
        >
          No tabs available.
          <!---->
        </div>
        <!---->
      </div>
    </div>
    
    <!---->
     
    <field-layout
      class="section"
    >
      <!---->
    </field-layout>
  </section>
  
</div>
`;

exports[`Category.svelte > should render with alternative navigator 1`] = `
<div>
  <section>
    <!---->
    <!---->
    <rk-switch
      aria-disabled="false"
      aria-label="Toggle Switch"
      aria-orientation="horizontal"
      role="listbox"
      tabindex="0"
    >
      <rk-item
        aria-selected="false"
        class="relative"
        data-path="0"
        role="option"
      >
        <!---->
         
        <!---->
        <!---->
         
        <p>
          one
        </p>
        <!---->
        <!---->
      </rk-item>
      <rk-item
        aria-selected="false"
        class="relative"
        data-path="1"
        role="option"
      >
        <!---->
         
        <!---->
        <!---->
         
        <p>
          two
        </p>
        <!---->
        <!---->
      </rk-item>
      <rk-item
        aria-selected="false"
        class="relative"
        data-path="2"
        role="option"
      >
        <!---->
         
        <!---->
        <!---->
         
        <p>
          three
        </p>
        <!---->
        <!---->
      </rk-item>
      
    </rk-switch>
    
    
    <!---->
     
    <field-layout
      class="vertical"
    >
      <!---->
    </field-layout>
  </section>
  
</div>
`;

exports[`Category.svelte > should render with alternative navigator 2`] = `
<div>
  <section>
    <!---->
    <div
      aria-label="tabs"
      data-tab-align="start"
      data-tab-orientation="horizontal"
      data-tab-position="before"
      data-tab-root=""
      role="tablist"
      tabindex="0"
    >
      <div
        data-tab-list=""
      >
        <!---->
         
        <!---->
      </div>
       
      <div
        data-tab-content=""
        role="tabpanel"
      >
        <div
          data-tab-empty=""
        >
          No tabs available.
          <!---->
        </div>
        <!---->
      </div>
    </div>
    
    <!---->
     
    <field-layout
      class="vertical"
    >
      <!---->
    </field-layout>
  </section>
  
</div>
`;

exports[`Category.svelte > should render with extra props 1`] = `
<div>
  <section>
    <!---->
    <div
      aria-label="tabs"
      data-tab-align="center"
      data-tab-orientation="horizontal"
      data-tab-position="before"
      data-tab-root=""
      role="tablist"
      tabindex="0"
    >
      <div
        data-tab-list=""
      >
        <!---->
         
        <!---->
      </div>
       
      <div
        data-tab-content=""
        role="tabpanel"
      >
        <div
          data-tab-empty=""
        >
          No tabs available.
          <!---->
        </div>
        <!---->
      </div>
    </div>
    
    <!---->
     
    <field-layout
      class="vertical"
    >
      <!---->
    </field-layout>
  </section>
  
</div>
`;

exports[`Category.svelte > should render with extra props 2`] = `
<div>
  <section>
    <!---->
    <div
      aria-label="tabs"
      data-tab-align="right"
      data-tab-orientation="horizontal"
      data-tab-position="before"
      data-tab-root=""
      role="tablist"
      tabindex="0"
    >
      <div
        data-tab-list=""
      >
        <!---->
         
        <!---->
      </div>
       
      <div
        data-tab-content=""
        role="tabpanel"
      >
        <div
          data-tab-empty=""
        >
          No tabs available.
          <!---->
        </div>
        <!---->
      </div>
    </div>
    
    <!---->
     
    <field-layout
      class="vertical"
    >
      <!---->
    </field-layout>
  </section>
  
</div>
`;
